syntax = "proto3";

message dependency {
  uint64 in = 1;
  repeated uint64 out = 2;
};

message dependency_set {
  uint64 sequence = 1;
  uint64 milli = 2;
  repeated dependency dep = 3;
  repeated uint64 victim = 4;
  repeated uint64 finish = 5;
}

message dependency_set_array {
  repeated dependency_set array = 1;
}